{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 31,
  "lineage": "55138be6-80af-ce14-6027-9766aff34c83",
  "resources": [
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231670762225:security-group/sg-00b0908805228531e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b0908805228531e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eksaws-paulo-master-sg",
            "name_prefix": "",
            "owner_id": "231670762225",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eksaws-paulo-master-sg"
            },
            "tags_all": {
              "Name": "eksaws-paulo-master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb8877c7ca6e202e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-304319429",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b0908805228531e",
            "security_group_rule_id": "sgr-0ffc6320580a93a3f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.cluster_master_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f68dddf9a8104652",
            "association_id": "eipassoc-08bfea52b36858f1e",
            "domain": "vpc",
            "id": "eipalloc-0f68dddf9a8104652",
            "network_border_group": "us-east-1",
            "network_interface": "eni-056b4cadb2592bcc6",
            "private_dns": "ip-10-0-0-99.ec2.internal",
            "private_ip": "10.0.0.99",
            "public_dns": "ec2-3-226-227-36.compute-1.amazonaws.com",
            "public_ip": "3.226.227.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eksaws-paulo-eip"
            },
            "tags_all": {
              "Name": "eksaws-paulo-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231670762225:internet-gateway/igw-08a86399b56a93983",
            "id": "igw-08a86399b56a93983",
            "owner_id": "231670762225",
            "tags": {
              "Name": "eksaws-paulo-internet-gateway"
            },
            "tags_all": {
              "Name": "eksaws-paulo-internet-gateway"
            },
            "vpc_id": "vpc-0eb8877c7ca6e202e"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f68dddf9a8104652",
            "association_id": "eipassoc-08bfea52b36858f1e",
            "connectivity_type": "public",
            "id": "nat-0563f5d25a4d1a6b3",
            "network_interface_id": "eni-056b4cadb2592bcc6",
            "private_ip": "10.0.0.99",
            "public_ip": "3.226.227.36",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ca443ea23175ac4b",
            "tags": {
              "Name": "eksaws-paulo-nat-gateway"
            },
            "tags_all": {
              "Name": "eksaws-paulo-nat-gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.vpc_eip",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-073d622d606fedc761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0563f5d25a4d1a6b3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-073d622d606fedc76",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.vpc_eip",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.nat_gateway_route_table",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08a86399b56a93983",
            "id": "r-rtb-03ba3bb8907b814df1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ba3bb8907b814df",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.internet_gateway_route_table",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_gateway_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231670762225:route-table/rtb-03ba3bb8907b814df",
            "id": "rtb-03ba3bb8907b814df",
            "owner_id": "231670762225",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a86399b56a93983",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eksaws-paulo-internet-gateway-route-table"
            },
            "tags_all": {
              "Name": "eksaws-paulo-internet-gateway-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb8877c7ca6e202e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gateway_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231670762225:route-table/rtb-073d622d606fedc76",
            "id": "rtb-073d622d606fedc76",
            "owner_id": "231670762225",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0563f5d25a4d1a6b3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eksaws-paulo-nat-gateway-route-table"
            },
            "tags_all": {
              "Name": "eksaws-paulo-nat-gateway-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb8877c7ca6e202e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a24cf8034dddc98",
            "route_table_id": "rtb-073d622d606fedc76",
            "subnet_id": "subnet-025df1e011a48e8ad"
          },
          "dependencies": [
            "module.network.aws_route_table.nat_gateway_route_table",
            "module.network.aws_subnet.private_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0481916a145a925aa",
            "route_table_id": "rtb-073d622d606fedc76",
            "subnet_id": "subnet-09ea085fc98673593"
          },
          "dependencies": [
            "module.network.aws_route_table.nat_gateway_route_table",
            "module.network.aws_subnet.private_subnet_1b",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01860e46b21043488",
            "route_table_id": "rtb-03ba3bb8907b814df",
            "subnet_id": "subnet-0ca443ea23175ac4b"
          },
          "dependencies": [
            "module.network.aws_route_table.internet_gateway_route_table",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065c0bbeb3083848c",
            "route_table_id": "rtb-03ba3bb8907b814df",
            "subnet_id": "subnet-099ad1729085f93f5"
          },
          "dependencies": [
            "module.network.aws_route_table.internet_gateway_route_table",
            "module.network.aws_subnet.public_subnet_1b",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231670762225:subnet/subnet-025df1e011a48e8ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025df1e011a48e8ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "231670762225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eksaws-paulo-private-1a"
            },
            "tags_all": {
              "Name": "eksaws-paulo-private-1a"
            },
            "vpc_id": "vpc-0eb8877c7ca6e202e"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231670762225:subnet/subnet-09ea085fc98673593",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ea085fc98673593",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "231670762225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eksaws-paulo-private-1b"
            },
            "tags_all": {
              "Name": "eksaws-paulo-private-1b"
            },
            "vpc_id": "vpc-0eb8877c7ca6e202e"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231670762225:subnet/subnet-0ca443ea23175ac4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca443ea23175ac4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "231670762225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eksaws-paulo-public-1a"
            },
            "tags_all": {
              "Name": "eksaws-paulo-public-1a"
            },
            "vpc_id": "vpc-0eb8877c7ca6e202e"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231670762225:subnet/subnet-099ad1729085f93f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099ad1729085f93f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "231670762225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eksaws-paulo-public-1b"
            },
            "tags_all": {
              "Name": "eksaws-paulo-public-1b"
            },
            "vpc_id": "vpc-0eb8877c7ca6e202e"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231670762225:vpc/vpc-0eb8877c7ca6e202e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-006066157190b955d",
            "default_route_table_id": "rtb-05a96dd8765107124",
            "default_security_group_id": "sg-0483fc7a3c27ea324",
            "dhcp_options_id": "dopt-0aea2c85f4d19ee28",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb8877c7ca6e202e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05a96dd8765107124",
            "owner_id": "231670762225",
            "tags": {
              "Name": "eksaws-paulo-vpc"
            },
            "tags_all": {
              "Name": "eksaws-paulo-vpc"
            }
          }
        }
      ]
    }
  ]
}